# randomness-testing-toolkit

./: .gitignore  CMakeLists.txt
cmake/: options.cmake
include/: bugexception.h  constants.h  globalcontainer.h  logger.h  rttexception.h  toolkitsettings.h
include/batteries/: configuration-batt.h  ibattery-batt.h  itest-batt.h  itestresult-batt.h  ivariant-batt.h  testconstants.h  testrunner-batt.h
include/batteries/result/: statistic-res.h  subtestresult-res.h  variantresult-res.h
include/clinterface/: batteryarg.h  clargument.h  resultstoragearg.h  rttclioptions.h
include/storage/: filestorage.h  istorage.h  mysqlstorage.h
libs/variant/include/mpark/: variant.hpp
libs/variant/test/: access.get.cpp  access.get_if.cpp  access.holds_alternative.cpp  assign.conversion.cpp  assign.copy.cpp  assign.emplace.cpp  assign.move.cpp  cnstr.conversion.cpp  cnstr.copy.cpp  cnstr.default.cpp  cnstr.in_place.cpp  cnstr.move.cpp  dtor.cpp  hash.cpp  intro.cpp  rel.cpp  swap.cpp  visit.cpp
src/: constants.cpp  logger.cpp  main.cpp  utils.cpp
src/batteries/: batteryoutput.cpp  configuration-batt.cpp  ibattery-batt.cpp  itest-batt.cpp  itestresult-batt.cpp  ivariant-batt.cpp  testconstants.cpp  testrunner-batt.cpp
src/batteries/dieharder/: battery-dh.cpp  battery-dh.h  setting-dh.h  test-dh.cpp  test-dh.h  testresult-dh.h  variant-dh.h
src/batteries/niststs/: battery-sts.cpp  battery-sts.h  test-sts.cpp  test-sts.h  testresult-sts.cpp  testresult-sts.h  variant-sts.h
src/batteries/result/: statistic-res.cpp  subtestresult-res.cpp  variantresult-res.cpp
src/batteries/testu01/: battery-tu01.cpp  battery-tu01.h  test-tu01.cpp  test-tu01.h  testresult-tu01.h  variant-tu01.h
src/clinterface/: batteryarg.cpp  resultstoragearg.cpp  rttclioptions.cpp
src/storage/: filestorage.cpp  istorage.cpp  mysqlstorage.cpp
